--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:features": "cross-env NODE_PATH=. NODE_ENV=test mocha --opts test/mocha.opts.features",
     "coverage": "cross-env NODE_PATH=. NODE_ENV=test nyc mocha --opts test/mocha.opts.unit",
     "lint": "eslint {src,test,config}/**/*.js",
-    "sequelize": "cross-env NODE_PATH=. sequelize",
+    "sequelize-dev": "cross-env NODE_PATH=. sequelize --env=development",
     "console": "cross-env NODE_PATH=. node src/interfaces/console/index.js",
     "heroku-postbuild": "NODE_ENV=production NODE_PATH=. sequelize db:migrate --url=$DATABASE_URL",
     "pm2": "pm2",
